# hackathon

./: .gitignore  Makefile  mlflow.db  pyproject.toml
logs/heart1D/20241125-114033/: events.out.tfevents.1732531234.DESKTOP-H9IK9HQ.60256.0
logs/heart1D/20241125-152457/: checkpoint.pt
logs/heart1D/20241125-154631/: checkpoint.pt
logs/heart1D/20241125-160604/: checkpoint.pt
logs/heart1D/20241125-162007/: checkpoint.pt
logs/heart1D/20241125-164442/: checkpoint.pt
logs/heart1D/20241125-165418/: checkpoint.pt
notebooks/: 01_explore-heart.ipynb  02_2D-models.ipynb  03_1D-models.ipynb  sandbox.ipynb
notebooks/logs/heart1D/20241125-123146/: events.out.tfevents.1732534306.MacBook-Pro-van-Tijs.local.72104.0
notebooks/logs/heart1D/20241125-123233/: events.out.tfevents.1732534353.MacBook-Pro-van-Tijs.local.72104.1
notebooks/logs/heart1D/20241125-123650/: events.out.tfevents.1732534610.MacBook-Pro-van-Tijs.local.72104.2
notebooks/logs/heart1D/20241125-123752/: events.out.tfevents.1732534672.MacBook-Pro-van-Tijs.local.72104.3
notebooks/logs/heart1D/20241125-123850/: events.out.tfevents.1732534730.MacBook-Pro-van-Tijs.local.72104.4
notebooks/logs/heart1D/20241125-123924/: events.out.tfevents.1732534764.MacBook-Pro-van-Tijs.local.72104.5
notebooks/logs/heart1D/20241125-123959/: events.out.tfevents.1732534799.MacBook-Pro-van-Tijs.local.72104.6
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/e05900661b63490d93efb82708125957/: meta.yaml
notebooks/mlruns/0/e05900661b63490d93efb82708125957/tags/: mlflow.runName  mlflow.source.name
src/: transfer_learning_templat_train.py  transfer_learning_template_train.py  transfer_learning_template_tune.py  utils.py
src/Leendert/: RNN.py  config.py  cuda_test.py  sandbox.ipynb  transformer.py  transformer_smote.py  voting_classifier.py
src/Leendert/mads_hackathon/: datasets.py
src/Leendert/raoulg_repo/: dataset.py
