[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SaferSephy", email = "t.vandervelden3@student.han.nl" }
]
dependencies = [
    "loguru",
    "pydantic",
    "mads-datasets>=0.3.14",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "mltrainer>=0.1.128",
    "hyperopt>=0.2.7",
    "azure-common>=1.1.28",
    "azure-identity>=1.19.0",
    "azure-storage-blob>=12.23.1",
    "python-dotenv>=1.0.1",
    "tytorch>=0.8.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel",
]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "N", "I", "I001"]
ignore = []


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hackathon"]
